fix input box overflow

--- a/static/wap/activity/0407/css/act-0405-1.css
+++ b/static/wap/activity/0407/css/act-0405-1.css
@@ -66,7 +66,7 @@ body {
 }
 .act-0405-celNumber input {
 	width: 75%;
-	height: 44px;
+	height: 40px;
 	background: #F5BCD5;
 	color: white;
 	margin-left: 20%;
